# mojo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  db_ops.py  import_seed.py  init.py  mojo_cli.py  pyproject.toml  review.py  scan.py  search.py  stats.py
.github/workflows/: test.yml
config/: default.yaml
dashboard/: __init__.py  export_static.py  server.py
dashboard/static/: index.html
db/: schema.sql
extract/: __init__.py  dedup.py  parser.py  pipeline.py  signals.py
extract/prompts/: filter.xml  structure.xml
hooks/: _resolve.py  on_session_end.py  on_stop.py
scripts/: dev-install.sh
seeds/: seed_knowledge.json
serve/: __init__.py  packer.py  sync.py
tests/: test_core.py  test_hooks_resolve.py  test_scan_git.py
tests/fixtures/: sample_session.jsonl
