[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mojo-extract"
version = "0.1.0"
description = "Local-first knowledge pipeline that distills Claude Code sessions into durable, reusable CLAUDE.md context."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "codespermuted" }]
keywords = [
    "claude-code",
    "anthropic",
    "knowledge-management",
    "llm",
    "developer-tools",
    "prompt-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "scikit-learn>=1.4",       # TF-IDF dedup
    "tiktoken>=0.7",           # token counting
    "click>=8.1",              # CLI (Python side)
    "rich>=13.0",              # pretty output
    "fastapi>=0.110",          # dashboard backend
    "uvicorn>=0.29",           # ASGI server
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/codespermuted/mojo"
Repository = "https://github.com/codespermuted/mojo"
Issues = "https://github.com/codespermuted/mojo/issues"
Changelog = "https://github.com/codespermuted/mojo/blob/main/CHANGELOG.md"

[project.scripts]
mojo = "mojo_cli:main"
mojo-extract = "extract.pipeline:main"
mojo-sync = "serve.sync:main"

[tool.hatch.build.targets.wheel]
packages = ["extract", "serve", "hooks", "dashboard"]

[tool.hatch.build.targets.wheel.force-include]
"db_ops.py" = "db_ops.py"
"scan.py" = "scan.py"
"search.py" = "search.py"
"stats.py" = "stats.py"
"review.py" = "review.py"
"init.py" = "init.py"
"import_seed.py" = "import_seed.py"
"mojo_cli.py" = "mojo_cli.py"
"db/schema.sql" = "db/schema.sql"
"config/default.yaml" = "config/default.yaml"
"seeds/seed_knowledge.json" = "seeds/seed_knowledge.json"
